# BLE-smart-mask

./: .gitignore  README.md
adxl362_adxl345sample/: CMakeLists.txt  prj.conf
adxl362_adxl345sample/boards/: nrf5340dk_nrf5340_cpuappns.overlay
adxl362_adxl345sample/src/: main.c
ble_smart_mask_app/: CMakeLists.txt  prj.conf  proj.conf
ble_smart_mask_app/boards/: nrf5340dk_nrf5340_cpuappns.overlay
ble_smart_mask_app/configuration/: ble_adv_def.h
ble_smart_mask_app/src/: main.c
ble_smart_mask_app/src/events/: bme680_measurement_event.c  bme680_measurement_event.h  config_event.c  config_event.h  sensor_packet_event.c  sensor_packet_event.h  trigger_measurement_event.c  trigger_measurement_event.h
ble_smart_mask_app/src/modules/: ble_bond.c  ble_bond_custom.c  bme680.c  sensor.c  settings_loader.c
